Add limit parameter to search
