# doc/openapi.yaml
@@ -169,6 +169,38 @@ components:
           type: integer
       title: Pagination
       type: object
+    SearchParameters:
+      properties:
+        limit:
+          default: 10
+          minimum: 1.0
+          title: Limit
+          type: integer
+        url:
+          description: "The url serves as the primary key in the Milvus collection.\
+            \ For consistancy, image URLs should not have escape characters. Optionally,\
+            \ additional metadata can be associated with the image as an arbitrary\
+            \ JSON object.\n\nAssumptions\n- Url follows pydantics' [HttpUrl](https://docs.pydantic.dev/usage/types/#urls):\
+            \ scheme http or https, TLD required, host required, max length 2083.\n\
+            - Images should have persitant URLs that will not change over time.\n\
+            - Images are accessible from the server where Idios is hosted and do not\
+            \ require authentication.\n- Only JPEG images are supported\n- Images\
+            \ must have their\_dimensions\_above\_150 x 150 pixels, otherwise the\
+            \ API will return an error `IMAGE_SIZE_TOO_SMALL`\n- If one of the image\
+            \ dimension exceeds 1000 pixels, Idios will resize the image so that the\
+            \ maximum dimension is set to 1000 pixels and the original aspect ratio\
+            \ is kept.\n- Some image links may be permalinks from library or museum\
+            \ image collections or be hosted on IIIF servers that only accept certain\
+            \ request headers, additionally, the URL may return a 303 redirect to\
+            \ point you to the actual image. The API should be able to handle the\
+            \ redirect silently and still use the original URL as the primary key."
+          example: https://iiif.itatti.harvard.edu/iiif/2/yashiro!letters-jp!letter_001.pdf/full/full/0/default.jpg
+          title: URL of the image
+          type: string
+      required:
+      - url
+      title: SearchParameters
+      type: object
     SearchResult:
       properties:
         metadata:
@@ -480,7 +512,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SingleImage'
+              $ref: '#/components/schemas/SearchParameters'
         required: true
       responses:
         '200':
